# thought-police-rs

./: Cargo.toml
application/: Cargo.toml
application/src/: identifier.rs  identitfier.rs  lib.rs
application/src/gateway/: mod.rs
application/src/gateway/respository/: thought.rs
application/src/usecase/thought/: create.rs  mod.rs  validate.rs
domain/: Cargo.toml
domain/src/: lib.rs
domain/src/entity/thought/: id.rs  mod.rs  title.rs
