[package]
name = "clean-arch-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "domain",
    "application"
]

[dependencies]
thiserror = "1.0.30"

[patch.crates-io]
domain = { path = "domain" }
application = { path = "application" }


